# bot

./: Cargo.toml
src/: .env  main.rs
src/common/: logger.rs  mod.rs  rpc.rs  utils.rs
src/core/: token.rs  tx.rs
src/dex/: mod.rs  pump_fun.rs  raydium.rs
src/engine/: swap.rs
src/engine/monitor/: auto_snipe.rs  creator_checks.rs  helius.rs  mod.rs
src/services/: mod.rs  zeroslot.rs
