[package]
name = "solana_sniper_bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_sniper_bot"
path = "src/lib.rs"

[[bin]]
name = "solana_sniper_bot_bin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

borsh = "1"
borsh-derive = "1"
spl-associated-token-account = "2"
bs58 = "0.5"
solana-transaction-status = "1.18.26"



# Solana
solana-sdk = "1.18.26"
solana-client = "1.18.26"

# Tokens
spl-token = "4.0.0"               # necesario para ID y helpers
spl-token-2022 = "3.0.0"
spl-token-client = "0.10.0"

# Utilidades
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = "0.21"
bincode = "1.3"

# Async / WebSocket
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.20"
futures = "0.3"




[features]
helius = []
yellowstone = []
raydium = []
pumpfun = []
zeroslot = []

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
